--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-- 1.3
+- 1.4
 before_script:
 - gem -v
 - ruby -v
@@ -8,8 +8,7 @@ before_script:
 - which nats-server
 - nats-server -v
 install:
-- go get code.google.com/p/go.tools/cmd/vet
-- go get code.google.com/p/go.tools/cmd/cover
+- go get golang.org/x/tools/cmd/...
 - go get github.com/mattn/goveralls
 script:
 - go fmt ./...
